hphp/hack/test/typecheck/tconst_unsoundness.php.rust_elab.exp
ERROR: File "tconst_unsoundness.php", line 16, characters 10-11:
Invalid return type (Typing[4110])
  File "tconst_unsoundness.php", line 14, characters 49-52:
  Expected `Tout`
  File "tconst_unsoundness.php", line 14, characters 40-42:
  But got `Tin = Tb::Ta::T`
ERROR: File "tconst_unsoundness.php", line 16, characters 10-11:
Invalid return type (Typing[4110])
  File "tconst_unsoundness.php", line 14, characters 49-52:
  Expected `Tout`
  File "tconst_unsoundness.php", line 14, characters 60-68:
  But got `Tb::Ta::T = Tin`
ERROR: File "tconst_unsoundness.php", line 16, characters 10-11:
Invalid return type (Typing[4110])
  File "tconst_unsoundness.php", line 14, characters 49-52:
  Expected `Tout`
  File "tconst_unsoundness.php", line 14, characters 68-68:
  But got `A::T super B::Ta::T`
  by accessing the type constant `T`
  File "tconst_unsoundness.php", line 14, characters 60-68:
  on the expression dependent type Tb::Ta
ERROR: File "tconst_unsoundness.php", line 16, characters 10-11:
Invalid return type (Typing[4110])
  File "tconst_unsoundness.php", line 14, characters 49-52:
  Expected `Tout`
  File "tconst_unsoundness.php", line 14, characters 68-68:
  But got `B::Ta::T where \B::Ta::T super Tb::Ta::T, \B::Ta::T as A::T`
  by accessing the type constant `T`
  File "tconst_unsoundness.php", line 14, characters 60-68:
  on the expression dependent type Tb::Ta
ERROR: File "tconst_unsoundness.php", line 16, characters 10-11:
Invalid return type (Typing[4110])
  File "tconst_unsoundness.php", line 14, characters 49-52:
  Expected `Tout`
  File "tconst_unsoundness.php", line 14, characters 68-68:
  But got `mixed` arising from an implicit `as mixed` constraint on this type
ERROR: File "tconst_unsoundness.php", line 16, characters 10-11:
Invalid return type (Typing[4110])
  File "tconst_unsoundness.php", line 14, characters 49-52:
  Expected `Tout`
  File "tconst_unsoundness.php", line 14, characters 72-74:
  But got `Tin = Tb::Ta::T`
ERROR: File "tconst_unsoundness.php", line 20, characters 10-10:
Can't access a type constant T from an unresolved type (Typing[4436])
  File "tconst_unsoundness.php", line 14, characters 68-68:
  Access happens here
  File "tconst_unsoundness.php", line 20, characters 10-10:
  Disambiguate the types using explicit type annotations here.
